DevOCL/src/objects/CLQ_Regulation__c.object
<CustomObject>
    <description>This object stores the standard regulations data that are used in Rule Regulations.</description>
    <fields>
        <fullName>CLQ_Additional_description__c</fullName>
        <label>Additional description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CLQ_Applicable_To__c</fullName>
        <label>Applicable To</label>
        <picklist>
            <picklistValues>
                <fullName>Alleged Ops</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Child Care Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Day Camp</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In-Home Aid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Out of State Registration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pre School</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>School Age Child Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Type A Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Type B Home</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>CLQ_Article__c</fullName>
        <label>Article</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CLQ_Date_Active__c</fullName>
        <label>Date Active</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CLQ_Date_Removed__c</fullName>
        <label>Date Removed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CLQ_External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This field is used an External ID for Regulation object.</description>
        <externalId>true</externalId>
        <label>External_Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CLQ_FCC_High_Risk_Reg__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FCC High Risk Reg</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CLQ_GSA_High_Risk_Reg__c</fullName>
        <defaultValue>false</defaultValue>
        <label>GSA High Risk Reg</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CLQ_High_Risk__c</fullName>
        <defaultValue>false</defaultValue>
        <label>High Risk</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CLQ_Parent_Regulation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Regulation</label>
        <referenceTo>CLQ_Regulation__c</referenceTo>
        <relationshipLabel>Regulations</relationshipLabel>
        <relationshipName>Regulations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CLQ_R_P_High_Risk_Reg__c</fullName>
        <defaultValue>false</defaultValue>
        <label>R&amp;P High Risk Reg</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CLQ_Reg_key__c</fullName>
        <externalId>true</externalId>
        <label>Reg_key</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Regulation</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Regulation No</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Regulations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>